--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <title>❤️ Akash's Personal Site</title>
 </head>
-<body style="background-color: gray;">
+<body>
 <hr size="3" noshade>
 <center>
 <h1>THE ADVANTURE OF<br> Akashdeep Halder</h1> 
